--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Girly-Man-Bullies</title>
+  <meta charset="UTF-8">
+  <title>Girly-Man-Bullies</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #222;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+      line-height: 1.6;
+    }
+    h1 {
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 0.3em;
+    }
+    ul {
+      margin-top: 1rem;
+    }
+    footer {
+      margin-top: 3rem;
+      font-size: 0.85rem;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
-    <h1>Girly-Man-Bullies</h1>
-    <p>This site is a record of manipulative bullying by men who act kind-hearted on the surface while gaslighting their targets and planting false narratives.</p>
-    <p>These individuals use charm as a weapon, building trust with bystanders while secretly attempting to provoke violence or reactions from their victims. Their ultimate goal is often to bait the target into a "first-strike" — framing them as the aggressor to escalate the situation into legal consequences.</p>
-    <p>We document these tactics to shed light on this form of psychological abuse and provide validation for those who have been mischaracterized or wrongly punished due to such manipulation.</p>
+  <h1>Girly-Man-Bullies</h1>
+  <p>This GitHub repository is a timestamped, factual documentation project exposing a recurring pattern of abuse committed by manipulative men who masquerade as kind-hearted allies.</p>
+  <p>These individuals frequently use gaslighting tactics, plant false narratives about their targets, and escalate situations strategically. Their goal is to provoke their target into committing a "first strike," enabling the bully to weaponize legal systems and social bias to further harm or discredit the target.</p>
+  <p>This project helps document such harmful psychological and social tactics for educational, legal, and personal protection purposes.</p>
+  <p>Key legal documents:</p>
+  <ul>
+    <li><a href="LICENSE.md">LICENSE.md</a></li>
+    <li><a href="README.md">README.md</a></li>
+    <li><a href="CONTRIBUTING.md">CONTRIBUTING.md</a></li>
+  </ul>
+  <footer>
+    &copy; 2025 Michael Thomas Widener, II
+  </footer>
 </body>
 </html>
